{{$NEXT}}

1.302013_017 2016-04-05 11:13:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support subtest identification for events
    - Bump minimum Test2 version

1.302013_016 2016-04-04 21:33:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support some newer event features from Test2
    - Bump minimum Test2 version

1.302013_015 2016-03-29 09:24:10-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version to protect from segv

1.302013_014 2016-03-08 10:00:50-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Skip test added in last release when threading is not avilable

1.302013_013 2016-03-08 09:19:39-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Test::Builder->reset now resets hub's idea of root pid/tid (#637)

1.302013_012 2016-01-28 20:38:16-08:00 America/Los_Angeles (TRIAL RELEASE)

    - $Level effects all contexts once Test::Builder is loaded
    - Requires Test2 0.000023

1.302013_011 2016-01-14 21:55:28-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Performance enhancements

1.302013_010 2016-01-12 05:57:43-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Changes needed for Test2 0.000018

1.302013_009 2016-01-11 16:35:57-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Make skip work without a count w/ done_testing (#629)
    - Require newer Test2 that fixes $! squashing (#628)

1.302013_008 2016-01-10 13:21:02-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version requirement (to fix downstream)

1.302013_007 2016-01-07 19:30:04-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version requirement

1.302013_006 2016-01-06 11:21:48-08:00 America/Los_Angeles (TRIAL RELEASE)

    - Update for Test2 0.000013
    - Delay loading Data::Dumper
    - Test2::API::test2_no_wait(1) when threads/forking are on
    - Fix Test::Tester to use context
    - More downstream dists for testing

1.302013_005 2015-12-29 13:01:32-08:00 America/Los_Angeles (TRIAL RELEASE)
